[gd_scene load_steps=29 format=2]

[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://Actors/Player/interact.png" type="Texture" id=2]
[ext_resource path="res://UI/Evidence/EvidenceList.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/statement_evidence.png" type="Texture" id=4]
[ext_resource path="res://UI/item_evidence.png" type="Texture" id=5]
[ext_resource path="res://UI/observation_evidence.png" type="Texture" id=6]
[ext_resource path="res://UI/observation_evidence_hover.png" type="Texture" id=7]
[ext_resource path="res://UI/statement_evidence_hover.png" type="Texture" id=8]
[ext_resource path="res://UI/item_evidence_hover.png" type="Texture" id=9]
[ext_resource path="res://UI/UI.gd" type="Script" id=10]
[ext_resource path="res://UI/font_l.tres" type="DynamicFont" id=11]
[ext_resource path="res://UI/Dialog/Dialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/font_l_no_outline.tres" type="DynamicFont" id=15]
[ext_resource path="res://UI/item_evidence_selected.png" type="Texture" id=16]
[ext_resource path="res://UI/observation_evidence_selected.png" type="Texture" id=17]
[ext_resource path="res://UI/statement_evidence_selected.png" type="Texture" id=18]
[ext_resource path="res://UI/Evidence/new.png" type="Texture" id=19]
[ext_resource path="res://UI/Alert.gd" type="Script" id=20]
[ext_resource path="res://UI/close.png" type="Texture" id=21]
[ext_resource path="res://UI/Tools.gd" type="Script" id=22]
[ext_resource path="res://cursors/point_cursor.tres" type="Resource" id=23]
[ext_resource path="res://cursors/grab_cursor.tres" type="Resource" id=24]
[ext_resource path="res://cursors/mouth_cursor.tres" type="Resource" id=25]
[ext_resource path="res://UI/Evidence/EvidenceDescriptions.gd" type="Script" id=27]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
cursors = [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ]

[node name="Tween" type="Tween" parent="."]

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Control" parent="Center"]
margin_left = 256.0
margin_top = 150.0
margin_right = 256.0
margin_bottom = 150.0
mouse_filter = 2

[node name="Sprite" type="Sprite" parent="Center/Hand"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 5

[node name="Label" type="Label" parent="Center/Hand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.5
margin_top = -32.0
margin_right = 14.5
margin_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = ExtResource( 11 )
text = "Amulya"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
mouse_filter = 2
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="Control" parent="HBoxContainer"]
visible = false
margin_right = 181.0
margin_bottom = 268.0
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
script = ExtResource( 22 )
click_mask = 4096

[node name="Dialog" parent="HBoxContainer" instance=ExtResource( 12 )]

[node name="EvidenceProof" type="MarginContainer" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 480.0
margin_bottom = 268.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer/EvidenceProof"]
margin_right = 188.0
margin_bottom = 268.0

[node name="Panel" type="Panel" parent="HBoxContainer/EvidenceProof/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/EvidenceProof/Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer"]
margin_right = 172.0
margin_bottom = 252.0

[node name="Evidence" type="HBoxContainer" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer"]
margin_right = 172.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Tabs" type="TabContainer" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence"]
margin_right = 140.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
tabs_visible = false

[node name="Statements" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = -2.0
type = 2
button_group = SubResource( 1 )

[node name="Observations" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs" instance=ExtResource( 3 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = -2.0
type = 1
button_group = SubResource( 2 )

[node name="Items" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs" instance=ExtResource( 3 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = -2.0
button_group = SubResource( 3 )

[node name="Categories" type="VBoxContainer" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence"]
margin_left = 144.0
margin_right = 172.0
margin_bottom = 186.0
size_flags_horizontal = 3

[node name="Statements" type="TextureButton" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories"]
margin_right = 28.0
margin_bottom = 59.0
hint_tooltip = "Statements"
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 4 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Observations" type="TextureButton" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories"]
margin_top = 63.0
margin_right = 28.0
margin_bottom = 122.0
hint_tooltip = "Observations"
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Items" type="TextureButton" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories"]
margin_top = 126.0
margin_right = 28.0
margin_bottom = 186.0
hint_tooltip = "Items"
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="EvidenceDescriptions" type="RichTextLabel" parent="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 172.0
margin_bottom = 252.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 15 )
bbcode_enabled = true
bbcode_text = "Evidence descriptions"
text = "Evidence descriptions"
script = ExtResource( 27 )

[node name="Hovering" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q" type="TextureButton" parent="Hovering"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
texture_pressed = ExtResource( 21 )

[node name="Alert" type="Control" parent="Hovering"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 20.0
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Hovering/Alert"]

[node name="Timer" type="Timer" parent="Hovering/Alert"]
wait_time = 3.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="Hovering/Alert"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Hovering/Alert/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 19 )

[node name="Label" type="Label" parent="Hovering/Alert/HBoxContainer"]
margin_left = 20.0
margin_right = 127.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "New evidence discovered"
[connection signal="end_speaking" from="HBoxContainer/Dialog" to="." method="_on_Dialog_end_speaking"]
[connection signal="speaking" from="HBoxContainer/Dialog" to="." method="_on_Dialog_speaking"]
[connection signal="tab_changed" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="evidence_selected" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Statements" to="." method="_on_evidence_selected"]
[connection signal="reading_evidence" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Statements" to="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/EvidenceDescriptions" method="_on_reading_evidence"]
[connection signal="evidence_selected" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Observations" to="." method="_on_evidence_selected"]
[connection signal="reading_evidence" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Observations" to="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/EvidenceDescriptions" method="_on_reading_evidence"]
[connection signal="evidence_selected" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Items" to="." method="_on_evidence_selected"]
[connection signal="reading_evidence" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Tabs/Items" to="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/EvidenceDescriptions" method="_on_reading_evidence"]
[connection signal="pressed" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories/Statements" to="." method="_on_category_pressed" binds= [ 0 ]]
[connection signal="pressed" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories/Observations" to="." method="_on_category_pressed" binds= [ 1 ]]
[connection signal="pressed" from="HBoxContainer/EvidenceProof/Control/Panel/MarginContainer/VBoxContainer/Evidence/Categories/Items" to="." method="_on_category_pressed" binds= [ 2 ]]
[connection signal="toggled" from="Hovering/Q" to="." method="_on_Q_toggled"]
